# ReseQROS

./: CMakeLists.txt  Dockerfile  README.md  ciao  package.xml
docker_utils/: entrypoint.sh
launch/: ReseQ.launch
msg/: Motor.msg  Remote.msg
reseq-ros/scripts/: definitions.py
reseq-ros/scripts/PID_tuning/: listener_PID_tuning.py
reseq-ros/scripts/agevar/: agevar_constant.py  agevar_in.py  listener_agevar_test.py
reseq-ros/scripts/agevar_v1/agevarFiles/: modulo_0.txt
reseq-ros/scripts/agevar_v2/: agevar2.py
reseq-ros/scripts/agevar_v3/: agevar_3_ver2.py
reseq_msgs/: CMakeLists.txt  package.xml
reseq_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
reseq_ros/launch/: Agevar.launch  Agevar_test.launch  ReseQ.launch
reseq_ros/msg/: Motor.msg  RealOutput.msg  Real_input.msg  Real_motor.msg
reseq_ros/reseq_ros/: communication.py  definitions.py  movementTest.py  setPIDconstants.py  turn_in_place.py
reseq_ros/reseq_ros/agevar/: agevar_constant.py  agevar_out.py  plot_test.py  remote_test.py
reseq_ros/scripts/: commands.py  communication.py  definitions.py  movementTest.py  setPIDconstants.py  tcp_communication.py  turn_in_place.py
reseq_ros/scripts/PID_tuning/: PID_tuning.py  listener_PID_tuning.py  publisher_PID_tuning.py
reseq_ros/scripts/agevar/: agevar.py  agevar_check.py  agevar_constant.py  agevar_core.py  agevar_in.py  agevar_kinematic.py  agevar_out.py  check_da_controllare.py  listener_agevar_test.py  plot_test.py  remote_test.py
reseq_ros/scripts/agevar_v2/: README.md
reseq_ros/scripts/csv_save/: remote_csv_save.py
reseq_ros/scripts/realsense/: sub.py
scripts/: agevar.py  bckcommunication.py  commands.py  communication.py  communication_tcp.py  constant.py  definitions.py  endeffector.py  movementTest.py  prova.py  remote-control.py  temporary_agevar.py
scripts/PID_tuning/: listener_PID_tuning.py  publisher_PID_tuning.py
scripts/agevar/: agevar.py  agevar_kinematic.py  agevar_out.py  prova_remote.py
scripts/agevar_v1/: agevar.py  constant.py  temporary_agevar.py
scripts/agevar_v1/agevarFiles/: modulo_1.txt
scripts/agevar_v2/: agevar_prova1.py  agevar_tmp_final.py  constant.py  integration_test.py  module_1_new_agevar.py  module_i_agevar.py  new_agevar_all_module.py  velocità_angolari.txt
scripts/agevar_v3/: agevar_3_ver2.py  agevar_3_ver2_sat.py  agevar_v3.py  constant.py
scripts/canbusTest/: simple_rx_test.py  simple_tx_test.py
scripts/communication/: communication.py  definitions.py
scripts/templates/: index.html
