<?xml version="1.0"?>
<package format="3">
  <name>reseq_msgs</name>
  <version>0.0.0</version>
  <description>ReseQROS messages package</description>

  <maintainer email="team.isaac.polito@gmail.com">Team ISAAC</maintainer>

  <license>TODO</license>

  <author email="marcofincato777@gmail.com">Marco Fincato</author>
  <author email="marcobarbon97@gmail.com">Marco Barbon</author>
  <author email="grilloandrea6@gmail.com">Andrea Grillo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
