<?xml version="1.0"?>
<package format="3">
  <name>reseq_ros</name>
  <version>0.0.0</version>
  <description>The ReseQROS package</description>

  <maintainer email="team.isaac.polito@gmail.com">Team ISAAC</maintainer>

  <license>aVeryGoodLicense!</license>

  <author email="marcofincato777@gmail.com">Marco Fincato</author>
  <author email="marcobarbon97@gmail.com">Marco Barbon</author>
  <author email="grilloandrea6@gmail.com">Andrea Grillo</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>reseq_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
